garde/tests/ui/compile-fail/length_bad_equal_combined_max.rs
#![allow(dead_code)]

#[derive(garde::Validate)]
struct Test<'a> {
    #[garde(length(max = 1, equal = 10))]
    max_equal: &'a str,
}

fn main() {}
