garde/tests/ui/compile-fail/length_bad_equal_combined_max.stderr
error: no `min` or `max` allowed if using `equal`
 --> tests/ui/compile-fail/length_bad_equal_combined_max.rs
  |
  |     #[garde(length(max = 1, equal = 10))]
  |                    ^^^
